--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="google-signin-client_id" content="705339485323-7l0kt0r010bo3s4peuhcknvmpiu96og2.apps.googleusercontent.com">
     <title>Schedule Saver</title>
-   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </head>
 
-<body>
-  
-   <a id="signout" href="#" onclick="signOut();" hidden>Sign out of Google</a>
+<body> <a id="signout" href="#" onclick="signOut();" hidden>Sign out of Google</a>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <script src="main.js"></script>
     <script src="https://apis.google.com/js/platform.js?onload=appStart" async defer></script>
-    </body>
+</body>
+
 </html>
