--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="google-signin-client_id" content="705339485323-7l0kt0r010bo3s4peuhcknvmpiu96og2.apps.googleusercontent.com">
-    <title>Schedule Saver</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="google-signin-client_id" content="955192429695-5dcrirs5op9vnq8a1t2tvrruhesqcvmc.apps.googleusercontent.com">
+  <title>The Daily Commit</title>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 
-<body> <a id="signout" href="#" onclick="signOut();" hidden>Sign out of Google</a>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <script src="main.js"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=appStart" async defer></script>
+<body>
+  <div class="g-signin2" data-onsuccess="onSignIn"></div>
+  <a href="#" onclick="signOut();">Sign out</a>
+  <a href="#" onclick="disconnect();">Disconnect</a>
+  <div id="email"></div>
+  <div id="photo"></div>
+  
+  <button id="plus-button">+</button>
+  <div id="plus-button-dialog">
+      <input id="plus-name">
+      <button id="plus-add-button">Add</button>
+  </div>
+  
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
+  <script src="main.js"></script>
+  <script src="https://apis.google.com/js/platform.js?onload=appStart" async defer></script>
 </body>
 
 </html>
